test/bad/multisym-last.fnl
(local abc [])

(print (abc:def.xyz))
